<?xml version="1.0"?>
<package format="3">
  <name>ign_sim_pointcloud_tool</name>
  <version>1.0.0</version>
  <description>The package converts pointcloud in Ignition Gazebo to velodyne format</description>

  <maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
